# ddo-caching

./: Cargo.toml  LICENSE.md  README.md
examples/psp/: main.rs  psp.rs  utils.rs
examples/srflp/: heuristics.rs  instance.rs  main.rs  model.rs  relax.rs  state.rs
examples/tsptw/: heuristics.rs  instance.rs  main.rs  model.rs  relax.rs  state.rs
resources/psp/: psp_100_10_100_100_0  psp_100_10_100_100_1  psp_100_10_100_100_2  psp_100_10_100_100_3  psp_100_10_100_100_4  psp_100_10_100_10_0  psp_100_10_100_10_1  psp_100_10_100_10_2  psp_100_10_100_10_3  psp_100_10_100_10_4  psp_100_10_100_1_0  psp_100_10_100_1_1  psp_100_10_100_1_2  psp_100_10_100_1_3  psp_100_10_100_1_4  psp_100_10_90_100_0  psp_100_10_90_100_1  psp_100_10_90_100_2  psp_100_10_90_100_3  psp_100_10_90_100_4  psp_100_10_90_10_0  psp_100_10_90_10_1  psp_100_10_90_10_2  psp_100_10_90_10_3  psp_100_10_90_10_4  psp_100_10_90_1_0  psp_100_10_90_1_1  psp_100_10_90_1_2  psp_100_10_90_1_3  psp_100_10_90_1_4  psp_100_10_95_100_0  psp_100_10_95_100_1  psp_100_10_95_100_2  psp_100_10_95_100_3  psp_100_10_95_100_4  psp_100_10_95_10_0  psp_100_10_95_10_1  psp_100_10_95_10_2  psp_100_10_95_10_3  psp_100_10_95_10_4  (+500 more)
results/: results.csv
src/: lib.rs  prelude.rs  utils.rs  xputils.rs
src/frontier/: mod.rs  no_dup.rs  simple.rs
src/heuristics/: mod.rs
src/mdd/: mod.rs  with_all.rs  with_barrier.rs
src/solver/: barrier.rs  mod.rs  parallel.rs
