[package]
name = "engineering"
version = "0.1.0"
edition = "2021"

[dependencies]
rustc-hash = "1.1.0"
peak_alloc = "0.1.0"
structopt = "0.3.26"
binary-heap-plus = "0.4.1"
compare = "0.1.0"
parking_lot = "0.12.0"
num_cpus = "1.13.1"
smallbitset = "0.5.1"
bitset-fixed = "0.1.0"
ordered-float = "3.0.0"

[dev-dependencies]
smallbitset = "0.5.1"
thiserror   = "1.0.30"
anyhow = "1.0.53"
regex = "1.5.4"
thread_local = "1.1.4"

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"